Commit version 1.2: Including decision btn text setting merge into endOfCharSet():   Optimization in progress
                                              Note: Version 2.0 = replaces buttons with icons, possibly replaces text scenario with voice and subtitles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,15 @@
 
     <!--Tier 4 scenarios + buttons -->
 
+        <!--Tier 4-a scenarios + buttons -->
+
+            <!--Tier 4-a-2 scenarios + buttons -->
+
+        <!--Tier 4-b scenarios + buttons -->
+
+            <!--Tier 4-b-2 scenarios + buttons -->
+
+
 
 
 </resources>
