Commit version 1.3: (krsticdragan) AutoTypeTextView Replaced with TypedTextView (iamporus)                                               Note: Version 2.0 = replaces buttons with icons, possibly replaces text scenario with voice and subtitles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,7 +120,7 @@
     <string name="drink_water">You are extremely thirsty and decide to take some water. \n\n
                                 The water seems clear, and fish are swimming lazily in the river. \n\n
                                 If you boil the water, you lose much of the water to steam, and you have to put more effort in, making you even more tired. \n\n
-                                If you drink the water plain, you might risk getting sick, but you won' t invest too much energy \n\n
+                                If you drink the water plain, you might risk getting sick, but you won\'t invest too much energy \n\n
                                 Do you: Boil the water or drink it plain? </string>
 
     <string name="boil_water">Boil Water</string>
